# Copyright (c) 2014 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../build/webrtc.gni")

cc_library(
  name = "utility",
  hdrs = [
            "include/audio_frame_operations.h",
            "include/file_player.h",
            "include/file_recorder.h",
            "include/helpers_android.h",
            "include/jvm_android.h",
            "include/process_thread.h",
            "source/coder.h",
            "source/file_player_impl.h",
            "source/file_recorder_impl.h",
            "source/process_thread_impl.h",
         ],
  srcs = [
            "source/audio_frame_operations.cc",
            "source/coder.cc",
            "source/file_player_impl.cc",
            "source/file_recorder_impl.cc",
            "source/helpers_android.cc",
            "source/jvm_android.cc",
            "source/process_thread_impl.cc",
         ],
  deps = [
    "../..:webrtc_common",
    "../../common_audio",
    "../../system_wrappers",
    "../audio_coding",
    "../media_file",
  ]
}
